Make cron job configurable

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -11,3 +11,4 @@ spring.h2.console.enabled=true
 spring.h2.console.path=/h2-ui
 spring.sql.init.platform=h2
 logging.level.com.fujitsu.trial.feecalc=DEBUG
+custom.cron.expression=0 15 * * * *
